--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "mongoose": "^8.5.2",
     "multer": "^1.4.5-lts.1",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "winston": "^3.14.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
