--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "fast-csv": "^5.0.1",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.5.2",
     "multer": "^1.4.5-lts.1",
+    "pdfkit": "^0.15.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "winston": "^3.14.1"
